Adding sort and summary, slight code cleanup

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -15,7 +15,7 @@
               <br />
             <form action="JavaScript:fetchCountries()">
               <div class="mb-3">
-                <label class="form-label" for="countryInput">Country name or code:</label>
+                <label class="form-label" for="countryInput">Country full name, partial name, or code:</label>
                 <input type="text" class="form-control" id="countryInput">
               </div>
               <input type="submit" class="btn btn-primary" value="Go">
