--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,31 +1,33 @@
 <!doctype html>
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Countries Search</title>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-        <link rel="stylesheet" href="/css/main.css">
-    </head>
-    <body>
-        <script src="/js/app.js"></script>
-        <div class="container">
-          <div class="row justify-content-center">
-            <div class="col-4">
+<html lang="en">
+<head>
+    <meta charset="utf-8">
+    <title>Countries Search</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="/css/main.css">
+</head>
+<body>
+<script src="/js/app.js"></script>
+<div class="container">
+    <div class="row justify-content-center">
+        <div class="col-4">
             <h1>Country Search</h1>
-              <br />
+            <br/>
             <form action="JavaScript:fetchCountries()">
-              <div class="mb-3">
-                <label class="form-label" for="countryInput">Country full name, partial name, or code:</label>
-                <input type="text" class="form-control" id="countryInput">
-              </div>
-              <input type="submit" class="btn btn-primary" value="Go">
+                <div class="mb-3">
+                    <label class="form-label" for="countryInput">Country full name, partial name, or code:</label>
+                    <input type="text" class="form-control" id="countryInput">
+                </div>
+                <input type="submit" class="btn btn-primary" value="Go">
             </form>
-            </div>
-          </div>
         </div>
-        <br />
-        <br />
-        <div class="container" id="response">
-        </div>
-    </body>
+    </div>
+</div>
+<br/>
+<br/>
+<div class="container" id="response">
+</div>
+</body>
 </html>
